Fix card flip bug
Fix card flip bug that the front card momentarily shows when flipped. Before we flipped, the front becomes not visible and flipping the card is not as smooth, now we change that logic with backface-visibility: hidden; which is much smoother because theres no momentarily card invisibility.

Remove clickEvent on back card because it is automatically flipped to front.

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,7 @@ $primary-color: rgb(238, 228, 221);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   transition: transform 0.3s;
+  backface-visibility: hidden;
 
   &:hover {
     transform: scale(1.05);
